--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "es-module-loader": "1.0.0",
     "font-awesome": "4.6.3",
     "jquery": "3.0.0",
+    "lodash": "^4.17.4",
     "moment": "2.15.0",
     "ng2-bootstrap": "1.1.5",
     "ng2-modal": "0.0.25",
