--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "@angular/router": "3.0.0",
     "angular-md5": "^0.1.10",
     "angular2-cookie": "^1.2.6",
+    "angular2-csv": "^0.2.5",
     "angular2-uuid": "^1.1.1",
     "base64-img": "^1.0.3",
     "core-js": "2.4.0",
