--- a/package.json
+++ b/package.json
@@ -141,6 +141,8 @@
     "angular-md5": "^0.1.10",
     "angular2-cookie": "^1.2.6",
     "angular2-csv": "^0.2.5",
+    "angular2-notifications": "^0.9.7",
+    "angular2-notifications-lite": "^0.1.2",
     "angular2-uuid": "^1.1.1",
     "base64-img": "^1.0.3",
     "core-js": "2.4.0",
