--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "moment": "2.15.0",
     "ng2-bootstrap": "1.1.5",
     "ng2-modal": "0.0.25",
+    "ng2-toasty": "^4.0.3",
     "ng2-uploader": "^2.0.0",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
